# logacy

./: Cargo.toml  README.md
crates/logacy-blame/: Cargo.toml
crates/logacy-blame/src/: lib.rs
crates/logacy-cli/: Cargo.toml
crates/logacy-cli/src/: main.rs
crates/logacy-core/: Cargo.toml
crates/logacy-core/src/: classify.rs  config.rs  lib.rs
crates/logacy-db/: Cargo.toml
crates/logacy-db/src/: functions.rs  lib.rs  models.rs  schema.rs
crates/logacy-index/: Cargo.toml
crates/logacy-index/src/: identity.rs  lib.rs  tags.rs
crates/logacy-maintain/: Cargo.toml
crates/logacy-maintain/src/: lib.rs
crates/logacy-report/: Cargo.toml
crates/logacy-report/src/: lib.rs
crates/logacy-web/: Cargo.toml
crates/logacy-web/src/: index.html  lib.rs  queries.rs
