[package]
name = "logacy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "logacy"
path = "src/main.rs"

[dependencies]
logacy-core.workspace = true
logacy-db.workspace = true
logacy-index.workspace = true
logacy-maintain.workspace = true
logacy-blame.workspace = true
logacy-report.workspace = true
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
