[package]
name = "logacy-web"
version.workspace = true
edition.workspace = true

[dependencies]
logacy-core.workspace = true
logacy-db.workspace = true
anyhow.workspace = true
diesel.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
